basic modification so that it can run on emulator/device

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,8 +17,8 @@
 
 
     <!-- API URLs -->
-    <string name="staging_website">https://staging.beiwe.org </string>
-    <string name="production_website">https://studies.beiwe.org </string>
+    <string name="staging_website">https://ec2-13-251-237-19.ap-southeast-1.compute.amazonaws.com:8888 </string>
+    <string name="production_website">https://ec2-13-251-237-19.ap-southeast-1.compute.amazonaws.com:8888 </string>
 
     <string name="data_upload_url">/upload</string>
     <string name="download_surveys_url">/download_surveys</string>
@@ -115,9 +115,9 @@
     <string name="number_entry_top_message">Phone Numbers</string>
     <string name="number_entry_button">Set Numbers</string>
     <string name="phone_number_entry_your_clinician_label">Primary researcher phone:</string>
-    <string name="phone_number_entry_your_clinician_hint">10-digit number</string>
+    <string name="phone_number_entry_your_clinician_hint">Telephone number</string>
     <string name="phone_number_entry_research_assistant_label">Research assistant phone:</string>
-    <string name="phone_number_entry_research_assistant_hint">10-digit number</string>
+    <string name="phone_number_entry_research_assistant_hint">Telephone number</string>
 
     <!-- Loading Activity Strings -->
     <string name="loading_activity_loading_message" tools:ignore="TypographyEllipsis">Loading...</string>
