--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,8 +17,8 @@
 
 
     <!-- API URLs -->
-    <string name="staging_website">https://ec2-13-251-237-19.ap-southeast-1.compute.amazonaws.com:8888 </string>
-    <string name="production_website">https://ec2-13-251-237-19.ap-southeast-1.compute.amazonaws.com:8888 </string>
+    <string name="staging_website">https://ec2-18-136-106-129.ap-southeast-1.compute.amazonaws.com </string>
+    <string name="production_website">https://ec2-18-136-106-129.ap-southeast-1.compute.amazonaws.com </string>
 
     <string name="data_upload_url">/upload</string>
     <string name="download_surveys_url">/download_surveys</string>
