--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -161,6 +161,8 @@
     <string name="turn_ambientlight_on">AmbientLight On</string>
     <string name="turn_bluetooth_off">Bluetooth OFF</string>
     <string name="turn_bluetooth_on">Bluetooth On</string>
+    <string name="turn_gyroscope_off">Gyroscope OFF</string>
+    <string name="turn_gyroscope_on">Gyroscope On</string>
     <string name="turn_gps_off">GPS OFF</string>
     <string name="turn_gps_on">GPS On</string>
     <string name="signout_intent">Signout</string>
