--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,8 @@
     <!-- Debug Menu Strings -->
     <string name="title_activity_debug_interface">Beiwe Debug Interface</string>
     <string name="title_activity_survey">Survey</string>
+    <string name="debug_activity_logging_warn">(Please click the below button before you leave as the debugger console will continue logging even if you close this APP)</string>
+    <string name="debug_activity_trigger_warn">(If registered to a study, you cannot trigger recording sessions for data streams that are disabled in the study configuration)</string>
 
     <!-- Error Messages -->
     <string name="question_error_text">If you are reading this, something broke. Please contact the study administrators, and tell them that there is a bug in the survey!</string>
@@ -160,6 +162,7 @@
     <string name="turn_accelerometer_off">Accelerometer OFF</string>
     <string name="turn_accelerometer_on">Accelerometer On</string>
     <string name="turn_ambientlight_on">AmbientLight On</string>
+    <string name="turn_ambienttemperature_on">AmbientTemperature On</string>
     <string name="turn_bluetooth_off">Bluetooth OFF</string>
     <string name="turn_bluetooth_on">Bluetooth On</string>
     <string name="turn_gyroscope_off">Gyroscope OFF</string>
