updated SSL certificate for the staging run

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -221,4 +221,31 @@
     <string name="barcode_error_format">Invalid QR code format</string>
     <string name="title_activity_qrcode">Scan QR to Register</string>
 
+    <!-- SSL certificate X.509 -->
+    <string name="ssl_crt">-----BEGIN CERTIFICATE-----
+MIID+jCCAuICCQCLAtLl5CWoLzANBgkqhkiG9w0BAQsFADCBvjELMAkGA1UEBhMC
+U0cxEjAQBgNVBAgMCVNpbmdhcG9yZTESMBAGA1UEBwwJU2luZ2Fwb3JlMQ0wCwYD
+VQQKDARNT0hUMQwwCgYDVQQLDANEU1QxQDA+BgNVBAMMN2VjMi0xOC0xMzktMTA2
+LTEzNS5hcC1zb3V0aGVhc3QtMS5jb21wdXRlLmFtYXpvbmF3cy5jb20xKDAmBgkq
+hkiG9w0BCQEWGXh1YW5jb25nLndhbmdAbW9odC5jb20uc2cwHhcNMTkwODA1MDI0
+NzE1WhcNMjkwODAyMDI0NzE1WjCBvjELMAkGA1UEBhMCU0cxEjAQBgNVBAgMCVNp
+bmdhcG9yZTESMBAGA1UEBwwJU2luZ2Fwb3JlMQ0wCwYDVQQKDARNT0hUMQwwCgYD
+VQQLDANEU1QxQDA+BgNVBAMMN2VjMi0xOC0xMzktMTA2LTEzNS5hcC1zb3V0aGVh
+c3QtMS5jb21wdXRlLmFtYXpvbmF3cy5jb20xKDAmBgkqhkiG9w0BCQEWGXh1YW5j
+b25nLndhbmdAbW9odC5jb20uc2cwggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEK
+AoIBAQC9a9e5/KCW02q+rIU3QNxC9CojWiLWjiOEFPGiz384ko4mjw00h616JGTY
+J8z7YfyhQjxIEmZFus+thOtgfLaKXmJ6PdFDnvB/SS+V2SmlecTkLDjgAWhLa1de
+yx4RZOQMmaT58nwjewTaG+40XYVj1cnf+VrAXMXOHOL64q+dsO1FnBPalmrc2Abw
+GrMtA/2l9wj/3nGxglSsKt3oyoJEA10CnmyFHWgr69VM3mxMMRJOZYP4b2rDMW37
+eEZLYeS4/MUQeldOZ8zurdctSBfljuS+He1PnzD4qNdemgRC3Trovc6yQVCKwIAi
+tvxswaMxdzoRPpasEHWxKUrAdb2dAgMBAAEwDQYJKoZIhvcNAQELBQADggEBACbq
+8PXNYpNqSQlBqHrO5yjRW+9pfaznLAs/74jNexpe1MbcE5tJG6K+WHaEaLBPc3Ns
+TMFP3Hti0elx87q40KYTzI27VjwmH9vt3Xgjl1XRk+B0hhGaZaROsEOcOKsRik0V
+930zFTIsjnOJC2D7o/B/FJzYeMyM7cAbPx+SzqMqai9YthMTXx1AKGu2BYkAGfyE
+nn34HOYGskxDmyw3u6KneJ1fkFvBAGY2OiK7xI0e4/ax6bDDyuD47O+MDHYL00Sm
+G/aAXpav9YdO9oRLgEw2tl6uwsmaQKexUDGZ+vaUckLSceVqYil8KDnGzIdJ8hFR
+qR7VZcxlxGuWqfxgwFg=
+-----END CERTIFICATE-----
+</string>
+
 </resources>
